/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
 */

apply plugin: 'java'

sourceCompatibility = 1.10
targetCompatibility = 1.10

repositories {
    mavenCentral()
}

dependencies {
    compile "com.fasterxml.jackson.core:jackson-core:2.9.5"
    compile "com.fasterxml.jackson.core:jackson-annotations:2.9.5"
    compile "com.fasterxml.jackson.core:jackson-databind:2.9.5"
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.5"
    compile "org.projectlombok:lombok:1.18.0"

    testCompile "junit:junit:4.12"
    testCompile "org.hamcrest:hamcrest-all:1.3"
}